Hibernate 5.4.30 Guava 30.1.1, CXF 3.4.3, JDK 16 Releases